--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/19 14:45:31 by manuel           ###   ########.fr        #
+#    Updated: 2024/04/30 15:37:17 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME 		=		mutantstack
+NAME 		=		PmergeMe
 
 ##	Compiler and flags
 COMP		=		c++
