--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/02 10:16:02 by codespace        ###   ########.fr        #
+#    Updated: 2024/05/02 10:44:25 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,7 +32,7 @@ INC_FILES		=	PmergeMe.hpp
 
 SRC_FILES		=	main.cpp		\
 					PmergeMe.cpp	\
-					parsing.cpp
+					globals.cpp
 
 
 
