--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
+#    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/02 12:04:56 by codespace        ###   ########.fr        #
+#    Updated: 2024/05/03 09:36:42 by manuel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,12 +27,15 @@ OBJ_PATH	=		objs
 ## ALL FILES
 
 INC_FILES		=	PmergeMe.hpp		\
-					MergeInsertComp.hpp
+					PmergeMe.tpp		\
+					MergeInsertComp.hpp	\
+					MergeInsertComp.tpp
 
 
 
-SRC_FILES		=	main.cpp		\
-					PmergeMe.cpp	\
+SRC_FILES		=	main.cpp			\
+					PmergeMe.cpp		\
+					MergeInsertComp.cpp	\
 					globals.cpp
 
 
