--- a/cpp09/iterators/Makefile
+++ b/cpp09/iterators/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/08 11:08:45 by codespace        ###   ########.fr        #
+#    Updated: 2024/05/08 11:28:35 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,9 +27,9 @@ OBJ_PATH	=		objs
 ## ALL FILES
 
 INC_FILES		=	GroupIterator.tpp		\
-					IterFuncs.tpp
-
-
+					IterFuncs.tpp			\
+					FordJohnson.tpp			\
+					QuickSort.tpp
 
 SRC_FILES		=	main.cpp
 
