--- a/cpp09/iterators/Makefile
+++ b/cpp09/iterators/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/08 11:37:33 by codespace        ###   ########.fr        #
+#    Updated: 2024/05/08 12:05:21 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,22 +20,31 @@ DEBUG_FLAGS	=		-DDEBUG_CONSTRUCTOR -DOPERATORS
 
 ## FOLDERS
 INC_PATH	=		incs
+TPP_PATH	=		tpp
 SRC_PATH	=		srcs
 OBJ_PATH	=		objs
 
 
 ## ALL FILES
 
-INC_FILES		=	GroupIterator.tpp		\
+INC_FILES 		=	GroupIterator.hpp		\
+					IterFuncs.hpp			\
+					FordJohnsonSort.hpp		\
+					QuickSort.hpp
+
+TPP_FILES		=	GroupIterator.tpp		\
 					IterFuncs.tpp			\
 					FordJohnsonSort.tpp		\
 					QuickSort.tpp
+
+
 
 SRC_FILES		=	main.cpp
 
 
 ## PREP
 INCS		:=		$(addprefix $(INC_PATH)/,$(INC_FILES))
+TPPS		:=		$(addprefix $(TPP_PATH)/,$(TPP_FILES))
 SRCS		:=		$(addprefix $(SRC_PATH)/,$(SRC_FILES))
 OBJS 		=		$(patsubst $(SRC_PATH)/%.cpp,$(OBJ_PATH)/%.o,$(SRCS))
 
@@ -45,7 +54,7 @@ $(NAME): $(OBJS)
 	$(COMP) $(FLAGS) $(OBJS) -I$(INC_PATH) -o $(NAME)
 	@echo Program $(NAME) ready!!
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp $(INCS)
+$(OBJ_PATH)/%.o: $(SRC_PATH)/%.cpp $(INCS) $(TPPS)
 	mkdir -p $(dir $@)
 	$(COMP) $(FLAGS) -I$(INC_PATH) -c $< -o $@
 
