--- a/cpp09/iterators/Makefile
+++ b/cpp09/iterators/Makefile
@@ -6,7 +6,7 @@
 #    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/08 12:05:21 by codespace        ###   ########.fr        #
+#    Updated: 2024/05/08 12:14:09 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -71,7 +71,7 @@ fclean: clean
 re: fclean all
 
 git:
-	@git add $(INCS) $(SRCS) Makefile && git commit -m "commiting" && git push
+	@git add $(INCS) $(SRCS) $(TPPS) Makefile && git commit -m "commiting" && git push
 
 run: all
 	@./$(NAME)
