--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,10 @@
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"*.tpp": "cpp",
+		"cstring": "cpp",
+		"set": "cpp",
+		"cinttypes": "cpp"
 	}
 }
