--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/05/03 11:20:33 by manuel           ###   ########.fr        #
+#    Updated: 2024/05/09 08:34:49 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,8 +34,7 @@ INC_FILES		=	PmergeMe.hpp		\
 
 
 SRC_FILES		=	main.cpp			\
-					PmergeMe.cpp		\
-					MergeInsertComp.cpp
+					PmergeMe.cpp
 
 
 ## PREP
