--- a/cpp09/ex01/Makefile
+++ b/cpp09/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: manuel <manuel@student.42.fr>              +#+  +:+       +#+         #
+#    By: codespace <codespace@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/12 16:42:30 by codespace         #+#    #+#              #
-#    Updated: 2024/04/19 12:45:20 by manuel           ###   ########.fr        #
+#    Updated: 2024/05/09 15:18:45 by codespace        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,7 @@ OBJ_PATH	=		objs
 
 ## ALL FILES
 
-INC_FILES		=		RPN.hpp			
+INC_FILES		=		RPN.hpp
 
 
 
